Refactoring validate condition, do logger in QuizRepository, create handeCallback